objects/Sub_Account__c.object
<CustomObject>
    <fields>
        <fullName>Account_Group__c</fullName>
        <label>Account Group</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Relation to a SFDC account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sub Accounts</relationshipLabel>
        <relationshipName>Sub_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Formula__c</fullName>
        <formula>IF(Street__c != &quot;&quot;,  Street__c, &quot;&quot;)
+  
IF( Street_2__c != &quot;&quot;, &quot;, &quot; + Street_2__c , &quot;&quot;)
+
IF(House_No__c != &quot;&quot;,  &quot; &quot; + House_No__c, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_Links__c</fullName>
        <formula>HYPERLINK(&apos;/apex/BusinessWarehouseReport?id=&apos; &amp; Id, &apos;Show Salesman Report&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show Salesman Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Org__c</fullName>
        <label>Business Org</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Description__c</fullName>
        <formula>if (isblank(Country_Text__c), Country_Code__c, Country_Code__c  &amp; &quot;: &quot; &amp;  Country_Text__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Text__c</fullName>
        <label>Country Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>ADK: Kwanza</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP: Peseta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AED: UAE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFA: Afghani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL: Lek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMD: Dram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANG: W.Ind.Guilders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARS: Pesos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATS: Schillings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD: Austr. dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZM: Manat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAD: Dinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAM: Bosnian Mark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBD: Dollars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDT: Taka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEC: Belgian francs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEF: Belgian francs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGL: Leva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGN: Bulgarian Leva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHD: Dinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIF: Burundi Francs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMD: Bermudan dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BND: Dollars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOP: Pesos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRC: Real</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL: Real</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSD: Dollars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BWP: Pula</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYB: Beloruss.Ruble</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYR: Beloruss.rubles</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Segment__c</fullName>
        <label>Customer Segment</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Danfoss_Customer_Group__c</fullName>
        <description>C&amp;E field 
Read only field in Salesforce. 
To pull in MDM Customer Group</description>
        <label>Danfoss Customer Group</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delivery Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial Compressors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heating Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danfoss Drives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refrigeration Controls</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>SMTP_ADDR</description>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Responsible__c</fullName>
        <label>Employee Responsible</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate_Type__c</fullName>
        <label>Exchange Rate Type</label>
        <picklist>
            <picklistValues>
                <fullName>001D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>002D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZKE Sales Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIR Aftalt Kurs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIR Phillips Aftalt Kurs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drives Exchange Rate IPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exchange Rate Type for York</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Euro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Euro-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Euro-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Euro for B Exchange Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exchange Rate China CNCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exchange Rate Denmark CNCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exchange Rate Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exchange Rate Type AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exchange Rate Type Fixed GM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Exchange Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPP Specific Exchange Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India Customs Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Bank Exchange Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intrastat Exchange Rate Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCFDDK Actual Trans. Rate for Valuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCFDGB Customer Specific Exchange Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MXCO Investments Exch. Rate Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RUCO Internal Exchange Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian Budget Exchange Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Exchange Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Std. Translation at Local Average Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UACO Indicative External Exchange Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kobskurs (Aktuel)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>House_No__c</fullName>
        <label>House No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Account_Name_SubAccount__c</fullName>
        <description>C&amp;E Field - Sub Account Name</description>
        <label>Local Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Address_SubAccount__c</fullName>
        <description>C&amp;E field - Local Address 
Localization details</description>
        <label>Local Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_City_SubAccount__c</fullName>
        <description>C&amp;E field - Local City 
Localization details</description>
        <label>Local City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Region_SubAccount__c</fullName>
        <description>C&amp;E field - Local Region 
Localization detail</description>
        <label>Local Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDM_PE_CUSTOMER_GRP_1__c</fullName>
        <label>DDS Global Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDM_PE_CUSTOMER_GRP_2__c</fullName>
        <label>DDS Global Sub Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDM_PE_CUSTOMER_GRP_3__c</fullName>
        <label>DDS Global Customer Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDM_RA_CUSTOMER_GRP_1__c</fullName>
        <label>DCS Customer Grp. (Level 1)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDM_RA_CUSTOMER_GRP_2__c</fullName>
        <label>DCS Customer Grp. (Level 2)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDM_RA_SELLING_ORG__c</fullName>
        <label>DCS Selling Org</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_2__c</fullName>
        <label>Name 2</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_3__c</fullName>
        <label>Name 3</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_4__c</fullName>
        <label>Name 4</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Box__c</fullName>
        <description>PFACH</description>
        <label>PO Box</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_City__c</fullName>
        <label>PO City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Postal_Code_City__c</fullName>
        <description>PFORT</description>
        <label>PO Postal Code City</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Text__c</fullName>
        <description>BEZEI</description>
        <label>Region Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>REGIO</description>
        <label>Region</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Account_ID__c</fullName>
        <externalId>true</externalId>
        <label>SAP Account ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Search_Term__c</fullName>
        <label>Search Term</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>IF( Country_Code__c=&apos;US&apos;, Region__c ,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_2__c</fullName>
        <label>Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tran_Block_Reason__c</fullName>
        <label>Tran Block Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transportation_Zone__c</fullName>
        <label>Transportation Zone</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <description>KNURL</description>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>is_Master__c</fullName>
        <formula>Account__r.Master_Sub_Account__c =  Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>is Master</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>